# DaVinci_Installer_For_Linux

./: PKGBUILD  README.md  davinci-installer.install  davinci-installer.py  pyproject.toml
pkg/davinci-installer/: .BUILDINFO  .MTREE  .PKGINFO
pkg/davinci-installer/usr/share/linexin/davincistudio/: PKGBUILD
src/: davinci-installer  messages.pot
src/applications/: github.petexy.davinciinstaller.desktop
src/locale/pl/LC_MESSAGES/: davinci-installer.po
src/usr/share/applications/: github.petexy.davinciinstaller.desktop
src/usr/share/linexin/davinci/: PKGBUILD
src/usr/share/linexin/davincistudio/: PKGBUILD  davinci-resolve-studio.install
src/usr/share/linexin/widgets/: c-davinci_installer.py
src/usr/share/linexin/widgets/localization/de_DE/: davinci_installer_dictionary.py
src/usr/share/linexin/widgets/localization/en_US/: davinci_installer_dictionary.py
src/usr/share/linexin/widgets/localization/es_ES/: davinci_installer_dictionary.py
src/usr/share/linexin/widgets/localization/fr_FR/: davinci_installer_dictionary.py
src/usr/share/linexin/widgets/localization/hi_IN/: davinci_installer_dictionary.py
src/usr/share/linexin/widgets/localization/pl_PL/: davinci_installer_dictionary.py
src/usr/share/linexin/widgets/localization/pt_BR/: davinci_installer_dictionary.py
src/usr/share/linexin/widgets/localization/pt_PT/: davinci_installer_dictionary.py
src/usr/share/linexin/widgets/localization/ru_RU/: davinci_installer_dictionary.py
src/usr/share/linexin/widgets/localization/zh_CN/: davinci_installer_dictionary.py
(+3 files in other folders)
