[project]
name = "davinci-installer"
version = "2.3.0"
description = "Smart Installer for DaVinci Resolve for Linux"
license = "GPL-3.0-only"
requires-python = ">=3.10"
authors = [
    {name = "Petexy"},
]
dependencies = [
    "PyGObject",
]

[project.urls]
Homepage = "https://github.com/Petexy/DaVinci_Installer_For_Linux"
Repository = "https://github.com/Petexy/DaVinci_Installer_For_Linux"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
